Describiendo mis cambios aquí